--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
       <a>Ready?💣</a>
     </div>
     <div class="box">
-      <div class="boom">💥💥💥Boom💥💥💥</div>
+      <div id="boom">💥💥💥Boom💥💥💥</div>
+      <a href="#boom"></a>
     </div>
   </body>
 </html>
