--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,10 @@
   </head>
   <body>
     <div class="main">
-      <a>Ready?💣</a>
+      <a href="#boom">Ready?💣</a>
     </div>
     <div class="box">
       <div id="boom">💥💥💥Boom💥💥💥</div>
-      <a href="#boom"></a>
     </div>
   </body>
 </html>
